--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
         <!--spring cloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
