--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password = 123456
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=200
 spring.datasource.hikari.minimum-idle=3
+
+mybatis.mapper-locations=classpath:/mappers/**/*.xml
+
 #redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
