--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <spring.cloud-version>2021.0.3</spring.cloud-version>
         <spring.boot.version>2.6.9</spring.boot.version>
         <mybatis.version>2.2.2</mybatis.version>
+        <redission.version>3.17.4</redission.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +59,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redission.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
