--- a/trade/src/main/resources/application.properties
+++ b/trade/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.cache.redis.key-prefix=account:
 spring.redis.jedis.pool.enabled=true
 #snowFlake
 snowFlake.workerId=1
-snowFlake.centerId=2
+snowFlake.centerId=3
 
 #consul
 spring.cloud.consul.host=localhost
@@ -26,5 +26,5 @@ spring.cloud.consul.discovery.health-check-path=/health
 
 
 #application
-spring.application.name=xlf-account
-server.port=8888
+spring.application.name=xlf_trade
+server.port=8889
