--- a/trade/src/main/resources/application.properties
+++ b/trade/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/account?verifyServerCertificate=false&useSSL=false&requireSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/trade?verifyServerCertificate=false&useSSL=false&requireSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -13,7 +13,7 @@ mybatis.mapper-locations=classpath:/mappers/**/*.xml
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.cache.redis.use-key-prefix=true
-spring.cache.redis.key-prefix=account:
+spring.cache.redis.key-prefix=trade:
 spring.redis.jedis.pool.enabled=true
 #snowFlake
 snowFlake.workerId=1
@@ -26,5 +26,5 @@ spring.cloud.consul.discovery.health-check-path=/health
 
 
 #application
-spring.application.name=xlf_trade
+spring.application.name=xlf-trade
 server.port=8889
